--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Lista de tareas pendientes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+ <!-- <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Tab pendientes</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
+  <ion-row>
+    <ion-col size-lg="11">
+      <ion-item>
+        <ion-label position="floating">Escriba una nueva tarea:</ion-label>
+        <ion-input [(ngModel)]="task"></ion-input>
+      </ion-item>
+    </ion-col>
+    <ion-col size-lg="1" size-xs="6">
+        <ion-button expand="block" *ngIf="task"  (click)="addTask()"> 
+          <ion-icon name="add"></ion-icon>
+        </ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-list>
+        <ion-item-sliding *ngFor="let item of tasks; let i=index">
+          <ion-item>
+            <ion-label>{{item}}</ion-label>
+          </ion-item>
+          <ion-item-options side="end" (ionSwipe)="removeTask(i)">
+            <ion-item-option expandable color="danger">
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+          <ion-item-options side="start" (ionSwipe)="completeTask(i)">
+            <ion-item-option expandable color="success">
+              <ion-icon name="checkmark-circle"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </ion-col>
+  </ion-row>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+ 
 </ion-content>
